--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
 
-    <title>Realtor</title>
+    <title>realtor.com&reg; | Homes for sale, Appartment and Houses for Rent</title>
   </head>
   <body class="bg-slate-200 h-screen m-0 p-0 box-border">
     <div id="root"></div>
